[package]
name = "tiddlyproxy"
version = "0.1.0"
authors = ["Vlad Poletaev <poletaev.vladislav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
generic-array = "0.14.2"

[dev-dependencies]
hex-literal = "0.2.1"
