[package]
name = "tiddlyproxy"
version = "0.1.0"
authors = ["Vlad Poletaev <poletaev.vladislav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
generic-array = "0.14.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.3"
tokio = { version = "0.2", features = ["macros"] }
hyper = "0.13.6"
clap = { version = "2.33.1", features = ["yaml"] }
rstest = "0.6.4"
http = "0.2.1"
futures = "0.3.5"
cookie = "0.14.1"
time = "0.2.16"
tinytemplate = "1.1.0"
url = "2.1.1"
rand = "0.7.3"
rand_chacha = "0.2.2"

[dev-dependencies]
hex-literal = "0.2.1"
httpmock = "0.4.0"
